2005-02-28  Aidan Kehoe  <kehoea@parhasard.net>

	* select-gtk.c (emacs_gtk_selection_handle):
	* select-gtk.c (emacs_gtk_selection_clear_event_handle):
	Use get_selection_raw_timestamp instead of Fget_selection_timestamp. 
	* select-gtk.c (gtk_own_selection):
	Cross reference to some debate in select-x.c
	* select-x.c:
	* select-x.c (x_handle_selection_request):
	Discuss Time vs. time_t--I think Time is _always_ thirty-two-bit
	and time_t is variable in size. 
	* select-x.c (x_handle_selection_clear):
	Replace call to Fget_selection_timestamp with call to
	get_selection_raw_time, check that pasted data pointer is non-zero
	before trying to free it. 
	* select.c:
	* select.c (Fown_selection_internal):
	Informative comment! Shouldn't actually be needed outside of the X
	world. 
	* select.c (get_selection_raw_time): New function. 
	* select.c (Fget_selection_timestamp): Rework to use
	get_selection_raw_time.
	* select.h:
	Make get_selection_raw_time available. 
	
2005-02-26  Aidan Kehoe  <kehoea@parhasard.net>

	* select-x.c (x_reply_selection_request): Use XtRegisterDrawable 
        to tell Xt not to drop PropertyChange events destined for the 
        selection request target window. This makes incremental selection 
        transfer work, instead of looping until interrupted.  

2005-01-06  Andrey Slusar  <anrays@gmail.com>

	* s/freebsd.h: fix build on the FreeBSD 6

2005-02-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* emacs.c (xemacs-release-date): New version info variable.
	* config.h.in (XEMACS_RELEASE_DATE): New config.h macro.

	* emacs.c (inhibit-early-packages):
	(inhibit-all-packages):
	(xemacs-extra-name): Improve docstrings.

2005-02-18  Jerry James  <james@xemacs.org>

	* number.c: Define USED_IF_BIGFLOAT.
	* number.c (Fcoerce_number): Use it.

2005-02-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.19 "chives" is released.

2005-02-04  Vin Shelton  <acs@xemacs.org>

	* lread.c (check_if_suppressed, check_if_suppressed):